Added functionality for sending whatsapp messages

--- a/functions/.env_example
+++ b/functions/.env_example
@@ -1,1 +1,4 @@
 RAZOR_WEBHOOK_SECRET_KEY = "Your Razorwebhook Secret Key"
+CODINGMANTRA_AI_API_URL = "https://codingmantra.ai/api/create-message"
+CODINGMANTRA_AI_APP_KEY = "Your CodingMantra AI App Key"
+CODINGMANTRA_AI_AUTH_KEY = "Your CodingMantra AI Auth Key"
