--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
